--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Aquí se encuentra el json</h1>
-    <a href="http://cpetruzzo.github.io/JSON-API/data.json">Ir al json</a>
+    <a href="http://cpetruzzo.github.io/JSONAPI/data.json">Ir al json</a>
 </body>
 </html>
